# claude-stream-monitor

./: README.md  pyproject.toml
src/claude_monitor/: __init__.py  app.py  main.py  parser.py  plain.py
src/claude_monitor/widgets/: __init__.py  feed.py
tests/: test_tui.py
