[project]
name = "claude-stream-monitor"
version = "0.1.0"
description = "TUI monitor for Claude Code stream-json output"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "textual>=0.80.0",
    "rich>=13.0.0",
    "click>=8.0.0",
]

[project.scripts]
claude-monitor = "claude_monitor.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claude_monitor"]

[tool.uv]
dev-dependencies = [
    "textual-dev>=0.80.0",
]
